// This is the public API offered by the shopping cart entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "cloudstate/entity_key.proto";
import "cloudstate/eventing.proto";
import "google/api/annotations.proto";

package $package;

option go_package = "$packageInPathFormat";
option java_outer_classname = "MyEntity";

message SetValue {
    string entity_id = 1 [(.cloudstate.entity_key) = true];
    int32 value = 2;
}

message GetValue {
    string entity_id = 1 [(.cloudstate.entity_key) = true];
}

message MyState {
    int32 value = 1;
}

service MyService {
    rpc Set(SetValue) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/${package}.MyState/{entity_id}",
            body: "*",
        };
        option (.cloudstate.eventing).in = "value";
    }


    rpc Get(GetValue) returns (MyState) {
        option (google.api.http) = {
          get: "/${package}.MyState/{entity_id}",
        };
    }
}
